force-app/main/default/objects/Lead/fields/AreaOfInterest__c.field-meta.xml
<CustomField>
    <fullName>AreaOfInterest__c</fullName>
    <inlineHelpText>If the lead has indicated a broad area of interest, please select it.</inlineHelpText>
    <label>Area Of Interest</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Safety Solutions</fullName>
            </value>
            <value>
                <fullName>Sustainability Solutions</fullName>
            </value>
            <value>
                <fullName>Efficiency Solutions</fullName>
            </value>
            <value>
                <fullName>Axora Productisation</fullName>
            </value>
            <value>
                <fullName>Axora Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>