force-app/main/default/objects/Lead/fields/Areas__c.field-meta.xml
<CustomField>
    <fullName>Areas__c</fullName>
    <label>Areas</label>
    <length>60</length>
    <type>Text</type>
</CustomField>