force-app/main/default/objects/Lead/fields/Created_From_Lead__c.field-meta.xml
<CustomField>
    <fullName>Created_From_Lead__c</fullName>
    <defaultValue>true</defaultValue>
    <description>used for reporting</description>
    <label>Created From Lead</label>
    <type>Checkbox</type>
</CustomField>