force-app/main/default/objects/Lead/fields/Date_Lead_moved_to_First_Meeting__c.field-meta.xml
<CustomField>
    <fullName>Date_Lead_moved_to_First_Meeting__c</fullName>
    <description>Updated via process builder</description>
    <label>Date Lead moved to First Meeting</label>
    <type>Date</type>
</CustomField>