force-app/main/default/objects/Lead/fields/Date_Lead_Moved_to_Pursuit__c.field-meta.xml
<CustomField>
    <fullName>Date_Lead_Moved_to_Pursuit__c</fullName>
    <description>Updated via process builder</description>
    <label>Date Lead Moved to Pursuit</label>
    <type>Date</type>
</CustomField>