force-app/main/default/objects/Lead/fields/Date_Lead_Was_Rejected__c.field-meta.xml
<CustomField>
    <fullName>Date_Lead_Was_Rejected__c</fullName>
    <description>Updated via process builder</description>
    <label>Date Lead Was Rejected</label>
    <type>Date</type>
</CustomField>