force-app/main/default/objects/Lead/fields/Deferred_to_date__c.field-meta.xml
<CustomField>
    <fullName>Deferred_to_date__c</fullName>
    <description>Updated automatically, also can be manually updated</description>
    <inlineHelpText>You will automatically be notified when this lead is ready to be re-engaged</inlineHelpText>
    <label>Deferred to date</label>
    <type>Date</type>
</CustomField>