force-app/main/default/objects/Lead/fields/Do_not_Defer__c.field-meta.xml
<CustomField>
    <fullName>Do_not_Defer__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checking this box will mean the lead will not auto defer and remain in your queue</description>
    <inlineHelpText>Checking this box will mean the lead will not auto defer and remain in your queue</inlineHelpText>
    <label>Do Not Defer</label>
    <type>Checkbox</type>
</CustomField>