force-app/main/default/objects/Lead/fields/Has_an_activity__c.field-meta.xml
<CustomField>
    <fullName>Has_an_activity__c</fullName>
    <defaultValue>false</defaultValue>
    <description>updates via pb</description>
    <label>Has an activity</label>
    <type>Checkbox</type>
</CustomField>