force-app/main/default/objects/Lead/fields/Is_at_first_meeting__c.field-meta.xml
<CustomField>
    <fullName>Is_at_first_meeting__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Updated via process builder</description>
    <label>Is at first meeting</label>
    <type>Checkbox</type>
</CustomField>