force-app/main/default/objects/Lead/fields/Is_rejected__c.field-meta.xml
<CustomField>
    <fullName>Is_rejected__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Updated via process builder</description>
    <label>Is rejected</label>
    <type>Checkbox</type>
</CustomField>