force-app/main/default/objects/Lead/fields/Matching_Rule__c.field-meta.xml
<CustomField>
    <fullName>Matching_Rule__c</fullName>
    <description>for lookup matching</description>
    <formula>LEFT(Company, 7)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Matching Rule</label>
    <type>Text</type>
</CustomField>