force-app/main/default/objects/Lead/fields/Segment__c.field-meta.xml
<CustomField>
    <fullName>Segment__c</fullName>
    <description>Set via suggested Account</description>
    <formula>TEXT(Suggested_Account__r.Industry)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Set via suggested Account</inlineHelpText>
    <label>Segment</label>
    <type>Text</type>
</CustomField>