force-app/main/default/objects/Lead/fields/Sell_Innovation__c.field-meta.xml
<CustomField>
    <fullName>Sell_Innovation__c</fullName>
    <label>Lead Information</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>