force-app/main/default/objects/Lead/fields/Source_Campaign_Info__c.field-meta.xml
<CustomField>
    <fullName>Source_Campaign_Info__c</fullName>
    <description>MS case 3354 for Pardot Analytics</description>
    <label>Source Campaign Info</label>
    <length>100</length>
    <type>Text</type>
</CustomField>