force-app/main/default/objects/Lead/fields/Source_URL__c.field-meta.xml
<CustomField>
    <fullName>Source_URL__c</fullName>
    <label>Source URL</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>