force-app/main/default/objects/Lead/fields/Suggested_Account_2__c.field-meta.xml
<CustomField>
    <fullName>Suggested_Account_2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Suggested Account 2</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Leads (Suggested Account 2)</relationshipLabel>
    <relationshipName>Leads1</relationshipName>
    <type>Lookup</type>
</CustomField>