force-app/main/default/objects/Lead/fields/Suggested_Account__c.field-meta.xml
<CustomField>
    <fullName>Suggested_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Automatically set via PB</description>
    <inlineHelpText>The Lead appears to be linked to this Account, remove if it is not.</inlineHelpText>
    <label>Suggested Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Leads</relationshipLabel>
    <relationshipName>Leads</relationshipName>
    <type>Lookup</type>
</CustomField>