force-app/main/default/objects/Lead/fields/Suggested_Account_Owner__c.field-meta.xml
<CustomField>
    <fullName>Suggested_Account_Owner__c</fullName>
    <description>Set via suggested account</description>
    <formula>Suggested_Account__r.Owner.FirstName &amp;&quot; &quot;&amp; Suggested_Account__r.Owner.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Set via suggested account</inlineHelpText>
    <label>Suggested Account Owner</label>
    <type>Text</type>
</CustomField>