force-app/main/default/objects/Lead/fields/Utm_Source__c.field-meta.xml
<CustomField>
    <fullName>Utm_Source__c</fullName>
    <description>Google Analytics UTM</description>
    <inlineHelpText>Google Analytics UTM</inlineHelpText>
    <label>UTM Source</label>
    <length>255</length>
    <type>Text</type>
</CustomField>