force-app/main/default/objects/Lead/validationRules/JobtitlePopulated.validationRule-meta.xml
<ValidationRule>
    <fullName>JobtitlePopulated</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL(Status, &apos;Converted&apos;) &amp;&amp; ISNULL(Title)</errorConditionFormula>
    <errorMessage>Please enter job title before you convert</errorMessage>
</ValidationRule>