force-app/main/default/objects/Lead/listViews/Main_Business_Development_Queue_Lead.listView-meta.xml
<ListView>
    <fullName>Main_Business_Development_Queue_Lead</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>pi__grade__c</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>Segment__c</columns>
    <columns>Suggested_Account__c</columns>
    <columns>Suggested_Account_Owner__c</columns>
    <filterScope>Queue</filterScope>
    <filters>
        <field>LEAD.STATUS</field>
        <operation>notEqual</operation>
        <value>Deferred</value>
    </filters>
    <label>Main Business Development Queue</label>
    <queue>Main_Business_Development_Queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>